<resources>
    <string name="app_name">ProjectIc</string>
    <string name="agreeRegistration">Placa del vehiculo</string>
    <string name="entry">Entrada</string>
    <string name="exit">Salida</string>
    <string name="autoCapacity">Autos acutalmente</string>
    <string name="validatePrice">Validar pago</string>
    <string name="cylinder">Ingrese cilindraje *Solo motos*</string>
    <string name="autos">Autos</string>
    <string name="motorcycles">Motos</string>
    <string name="view">Ver</string>
</resources>